fixed text alignment on character sheet

--- a/ui/static/css/output.css
+++ b/ui/static/css/output.css
@@ -608,10 +608,6 @@ video {
   top: 0px;
 }
 
-.top-1\/4 {
-  top: 25%;
-}
-
 .top-6 {
   top: 1.5rem;
 }
@@ -675,8 +671,8 @@ video {
   margin-left: 2.5rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.ml-7 {
+  margin-left: 1.75rem;
 }
 
 .ml-auto {
@@ -695,6 +691,10 @@ video {
   margin-right: 9rem;
 }
 
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -705,18 +705,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.mr-7 {
-  margin-right: 1.75rem;
-}
-
-.ml-7 {
-  margin-left: 1.75rem;
 }
 
 .block {
@@ -755,12 +743,12 @@ video {
   height: 1px;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .min-h-96 {
   min-height: 24rem;
+}
+
+.w-1\/5 {
+  width: 20%;
 }
 
 .w-2\/3 {
@@ -775,28 +763,12 @@ video {
   width: 5rem;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
-}
-
-.w-1\/5 {
-  width: 20%;
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .min-w-40 {
@@ -822,10 +794,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-center {
@@ -912,16 +880,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -976,16 +934,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
 }
 
 .text-left {
